--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ make-bcache
 probe-bcache
 .*
 *.o
+Makefile.in
+aclocal.m4
+autom4te.cache
+compile
+config.guess
+config.h.in
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+m4
+missing
