--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
 PREFIX=/usr
-AM_CFLAGS=-O2 -Wall -g -std=gnu99
+AM_CFLAGS=-std=gnu99 `pkg-config --cflags uuid blkid`
+AM_LDFLAGS=`pkg-config --libs uuid blkid` -L$(top_builddir)
 
 
 bin_PROGRAMS=make-bcache \
@@ -12,21 +13,22 @@ bin_PROGRAMS=make-bcache \
 
 noinst_PROGRAMS=bcache-test
 
-make_bcache_SOURCES=make-bcache.c bcache.c
-make_bcache_LDFLAGS=`pkg-config --libs uuid blkid`
-make_bcache_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags uuid blkid`
+lib_LIBRARIES=libbcache.a
+libbcache_a_SOURCES=bcache.c
+bcache_LDADD=libbcache.a
 
-probe_bcache_SOURCES=probe-bcache.c bcache.c
-probe_bcache_LDFLAGS=`pkg-config --libs uuid blkid`
-probe_bcache_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags uuid blkid`
+make_bcache_SOURCES=make-bcache.c
+make_bcache_LDADD=libbcache.a
 
-bcache_super_show_SOURCES=bcache-super-show.c bcache.c
-bcache_super_show_LDFLAGS=`pkg-config --libs uuid`
-bcache_super_show_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags uuid`
+probe_bcache_SOURCES=probe-bcache.c
+probe_bcache_LDADD=libbcache.a
+
+bcache_super_show_SOURCES=bcache-super-show.c
+bcache_super_show_LDADD=libbcache.a
 
 bcachectl_SOURCES=bcachectl.c
 
-bcache_test_SOURCE=bcache-test.c
+bcache_test_SOURCES=bcache-test.c
 bcache_test_LDFLAGS=-lm `pkg-config --libs openssl`
 bcache_test_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags openssl`
 
