Initial template for bcacheadm man page.
TODO: Work with Kent to fill in descriptions for several items

Change-Id: Iea4fe9e6a99842bf40b0213eecb61d48952aa1bb
Signed-off-by: Jacob Malevich <jam@daterainc.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,4 +49,5 @@ initramfsdir=$(prefix)/etc/initramfs-tools/hooks/
 
 man8_MANS= bcache-super-show.8 \
 	   make-bcache.8 \
-	   probe-bcache.8
+	   probe-bcache.8 \
+	   bcacheadm.8
