bcacheadm: format bug fixes
bcacheadm format is now working in replacement of make-bcache

Change-Id: Ib152dde3b8dc1418d1508020529dd58e4cf5d222
Signed-off-by: Jacob Malevich <jam@daterainc.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,7 @@ bcache_test_LDFLAGS=-lm `pkg-config --libs openssl`
 bcache_test_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags openssl`
 
 bcacheadm_SOURCES=bcacheadm.c
+bcacheadm_CFLAGS=$(AM_CFLAGS) -g
 bcacheadm_LDFLAGS=$(AM_LDFLAGS) -lnih
 bcacheadm_LDADD=libbcache.a
 
