Cleanup, rip out more code, fix compiler warnings
Change-Id: I76b410dc700a917d2717b1ceda0df061a1599144

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,42 +2,21 @@
 AUTOMAKE_OPTIONS=subdir-objects
 
 PREFIX=/usr
-AM_CFLAGS=-std=gnu99 `pkg-config --cflags uuid blkid`
-AM_LDFLAGS=`pkg-config --libs uuid blkid` -L$(top_builddir)
+AM_CFLAGS=-std=gnu99 -O2 -Wall -Werror -g
 
+bin_PROGRAMS=bcacheadm probe-bcache
 
-bin_PROGRAMS=make-bcache \
-	     probe-bcache \
-	     bcache-super-show \
-	     bcachectl \
-	     bcacheadm
-
-noinst_PROGRAMS=bcache-test
-
-lib_LIBRARIES=libbcache.a
-libbcache_a_SOURCES=bcache.c
-bcache_LDADD=libbcache.a
-
-make_bcache_SOURCES=make-bcache.c
-make_bcache_LDADD=libbcache.a
-
-probe_bcache_SOURCES=probe-bcache.c
-probe_bcache_LDADD=libbcache.a
-
-bcache_super_show_SOURCES=bcache-super-show.c
-bcache_super_show_LDADD=libbcache.a
-
-bcachectl_SOURCES=bcachectl.c
-
-bcache_test_SOURCES=bcache-test.c
-bcache_test_LDFLAGS=-lm `pkg-config --libs openssl`
-bcache_test_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags openssl`
+bcache.o: CFLAGS += `pkg-config --cflags uuid blkid`
 
 bcacheadm_SOURCES=bcacheadm.c
-bcacheadm_CFLAGS=$(AM_CFLAGS) -g
-bcacheadm_LDFLAGS=$(AM_LDFLAGS) -lnih
-bcacheadm_LDADD=libbcache.a
+bcacheadm_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags uuid blkid libnih`
+bcacheadm_LDFLAGS=`pkg-config --libs uuid blkid libnih`
+bcacheadm_LDADD=bcache.o
 
+probe_bcache_SOURCES=probe-bcache.c
+probe_bcache_CFLAGS=$(AM_CFLAGS) `pkg-config --cflags uuid blkid`
+probe_bcache_LDFLAGS=`pkg-config --libs uuid blkid`
+probe_bcache_LDADD=bcache.o
 
 udevrule_DATA=69-bcache.rules
 udevruledir=$(prefix)/lib/udev/rules.d
@@ -48,10 +27,7 @@ udevrdir=$(prefix)/lib/udev/
 initramfs_SCRIPTS=initramfs/bcache
 initramfsdir=$(prefix)/etc/initramfs-tools/hooks/
 
-man8_MANS= bcache-super-show.8 \
-	   make-bcache.8 \
-	   probe-bcache.8 \
-	   bcacheadm.8
+man8_MANS=bcacheadm.8 probe-bcache.8
 
 include ../../../../../../../../../../usr/share/DateraContainer/Makefile.rpm
 # some version of automake don't like absolute path names for included makefiles
