Redo lots of stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,7 @@
-bcacheadm
+bcache
 probe-bcache
 .*
 *.o
+*.a
 tags
 cscope*
-Makefile.in
-aclocal.m4
-autom4te.cache
-compile
-config.guess
-config.h.in
-config.sub
-config.type
-configure
-depcomp
-install-sh
-ltmain.sh
-m4
-missing
-include
