finish ripping out libnih

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Uploaders: Robie Basak <robie@justgohome.co.uk>
 Section: utils
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 9), pkg-config, libblkid-dev, uuid-dev, libnih-dev,
+Build-Depends: debhelper (>= 9), pkg-config, libblkid-dev, uuid-dev,
 	libscrypt-dev, libsodium-dev, libkeyutils-dev
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/bcache-tools.git
 Vcs-Git: git://anonscm.debian.org/collab-maint/bcache-tools.git
