docs: use pod2man/pod2html for new man pages
This ports the old bcachefs.8 man page to Perl Documentation (POD)
format, and uses the pod2man/pod2html tools to render troff/html output
for display.

Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/result
+/result*
 bcachefs
 .*
 *.o
@@ -7,3 +7,8 @@ bcachefs
 tags
 cscope*
 bcachefs-tools
+
+# pod2html/pod2man artifacts
+*.8
+*.html
+*.tmp
